// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R3 — the phone is unchanged (golden) deliveries add sheet (header Add), iOS 390 1`] = `
{
  "lines": 968,
  "sha256": "f16694df0c8e5579631e9b556d3e71bfbe3d77c42d6ffe42dd633bebf3e152a6",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, iOS 390 1`] = `
{
  "lines": 968,
  "sha256": "e4eb7c66bbafd0afa1d2865a24a88f93edbe408a4db53fafd6f5c25b4b25856f",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 390 1`] = `
{
  "lines": 968,
  "sha256": "e4eb7c66bbafd0afa1d2865a24a88f93edbe408a4db53fafd6f5c25b4b25856f",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 768 1`] = `
{
  "lines": 968,
  "sha256": "e4eb7c66bbafd0afa1d2865a24a88f93edbe408a4db53fafd6f5c25b4b25856f",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries receive sheet (receive-<id>), iOS 390 1`] = `
{
  "lines": 996,
  "sha256": "b25af02696c1cb07e7d732ddd1ae934c0fa2524e83b9082aca29e8ddb80b75ac",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, iOS 390 1`] = `
{
  "lines": 489,
  "sha256": "de52f936415fd38448b98394097771617fbf6b3015bf43215c7a0850eb2a96ff",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 390 1`] = `
{
  "lines": 489,
  "sha256": "de52f936415fd38448b98394097771617fbf6b3015bf43215c7a0850eb2a96ff",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 768 1`] = `
{
  "lines": 489,
  "sha256": "de52f936415fd38448b98394097771617fbf6b3015bf43215c7a0850eb2a96ff",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, iOS 390 1`] = `
{
  "lines": 613,
  "sha256": "b6ffcbb7ed3b0422cc9febfca93162f5265cb656be93175e4b73d2474e9b605d",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 390 1`] = `
{
  "lines": 613,
  "sha256": "b6ffcbb7ed3b0422cc9febfca93162f5265cb656be93175e4b73d2474e9b605d",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 768 1`] = `
{
  "lines": 613,
  "sha256": "b6ffcbb7ed3b0422cc9febfca93162f5265cb656be93175e4b73d2474e9b605d",
}
`;
